--- a/ChatStatsApi/packages.config
+++ b/ChatStatsApi/packages.config
@@ -10,7 +10,14 @@
   <package id="Microsoft.Data.OData" version="5.7.0" targetFramework="net452" />
   <package id="Microsoft.Data.Services.Client" version="5.7.0" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net452" />
+  <package id="Ninject" version="3.2.0.0" targetFramework="net452" />
+  <package id="Ninject.Web.Common" version="3.2.0.0" targetFramework="net452" />
+  <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net452" />
+  <package id="Ninject.Web.WebApi" version="3.2.0.0" targetFramework="net452" />
+  <package id="Ninject.Web.WebApi.WebHost" version="3.2.4.0" targetFramework="net452" />
   <package id="System.Spatial" version="5.7.0" targetFramework="net452" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net452" />
   <package id="WindowsAzure.Storage" version="8.0.1" targetFramework="net452" />
 </packages>
