--- a/ChatStatsApi/ChatStatsApi.csproj
+++ b/ChatStatsApi/ChatStatsApi.csproj
@@ -138,6 +138,8 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="AzureStorage\AzureTableStorageClient.cs" />
     <Compile Include="Controllers\DataUploadController.cs" />
+    <Compile Include="Extensions\DateTimeExtensions.cs" />
+    <Compile Include="Extensions\MessageRecordCollectionExtensions.cs" />
     <Compile Include="Models\MessageEntryTableEntity.cs" />
     <Compile Include="Controllers\WordsController.cs" />
     <Compile Include="Global.asax.cs">
