--- a/ChatStatsApi/packages.config
+++ b/ChatStatsApi/packages.config
@@ -17,6 +17,8 @@
   <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net452" />
   <package id="Ninject.Web.WebApi" version="3.2.4.0" targetFramework="net452" />
   <package id="Ninject.Web.WebApi.WebHost" version="3.2.4.0" targetFramework="net452" />
+  <package id="Swashbuckle" version="5.5.3" targetFramework="net452" />
+  <package id="Swashbuckle.Core" version="5.5.3" targetFramework="net452" />
   <package id="System.Spatial" version="5.7.0" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net452" />
   <package id="WindowsAzure.Storage" version="8.0.1" targetFramework="net452" />
